# cloud-music

./: CMakeLists.txt  main.cpp  resource.qrc
qml/: App.qml  LayoutBottomView.qml  MusicIconButton.qml  MusicToolButton.qml  PageHomeView.qml
qml/components/: LayoutBottomView.qml  LayoutHeaderView.qml  MusicBannerView.qml  MusicRoundedImage.qml  PageHomeView.qml
qml/pages/: DetailFavoritePageView.qml  DetailHistoryPageView.qml  DetailLocalPageView.qml  DetailRecommendPageView.qml  DetailSearchPageView.qml
